--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,22 @@
 {
     "Lua.workspace.library": [
-    ],
+		"/mnt/c/Users/RWROS/Downloads/BetterBags-main/annotations.lua",
+		"/mnt/c/Users/RWROS/Downloads/BetterBags-main/",
+		"~/.vscode-server/extensions/ketho.wow-api-0.18.1/Annotations"
+	],
     "Lua.diagnostics.globals": [
     ],
     "wowAPI.luals.setLuaRuntime": true,
     "Lua.runtime.version": "Lua 5.1",
     "Lua.runtime.builtin": {
-        "basic": "disable",
-        "debug": "disable",
-        "io": "disable",
-        "math": "disable",
-        "os": "disable",
-        "package": "disable",
-        "string": "disable",
-        "table": "disable",
-        "utf8": "disable"
-    }
+		"basic": "disable",
+		"debug": "disable",
+		"io": "disable",
+		"math": "disable",
+		"os": "disable",
+		"package": "disable",
+		"string": "disable",
+		"table": "disable",
+		"utf8": "disable"
+	}
 }
